Change `jsObject.value` to `ImmutableLinkedHashMap` to mitigate hash collisions.